minor tweaks in spacing / comments / icon naming convention fix

--- a/styles/place.css
+++ b/styles/place.css
@@ -53,6 +53,8 @@ section{
 
 ul{
     list-style: none;
+    padding: 1em;
+    line-height: 140%;
 }
 
 footer{
